src/objects/Survey_Question__c.object
<CustomObject>
    <fields>
        <fullName>Choices__c</fullName>
        <label>Choices</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <description>Field to specify in which position the question is in the survey.</description>
        <inlineHelpText>Enter the position of the question within the survey here.</inlineHelpText>
        <label>OrderNumber</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the question required?</description>
        <inlineHelpText>Check this box if you want the taker to be required to take the question.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>SurveyQuestions</relationshipLabel>
        <relationshipName>SurveyQuestions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Responses__c</fullName>
        <label>Total Responses</label>
        <summaryForeignKey>SurveyQuestionResponse__c.Survey_Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single Select--Vertical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Select--Horizontal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Select--Vertical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FreeText Number</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Survey Question</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>